force-app/main/default/objects/webForm__c/fields/Interests__c.field-meta.xml
<CustomField>
    <fullName>Interests__c</fullName>
    <label>Interests</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Smart Home Automation</fullName>
            </value>
            <value>
                <fullName>Pest Control</fullName>
            </value>
            <value>
                <fullName>Blinds &amp; Shutters</fullName>
            </value>
            <value>
                <fullName>House Cleaning</fullName>
            </value>
            <value>
                <fullName>Flooring</fullName>
            </value>
            <value>
                <fullName>Landscaping</fullName>
            </value>
            <value>
                <fullName>Bath</fullName>
            </value>
            <value>
                <fullName>Garage Floor Coating</fullName>
            </value>
            <value>
                <fullName>Locksmith</fullName>
            </value>
            <value>
                <fullName>Floor Cleaning</fullName>
            </value>
            <value>
                <fullName>Roofing</fullName>
            </value>
            <value>
                <fullName>Handyman</fullName>
            </value>
            <value>
                <fullName>Water Filtration</fullName>
            </value>
            <value>
                <fullName>Windows</fullName>
            </value>
            <value>
                <fullName>Solar</fullName>
            </value>
            <value>
                <fullName>Pool</fullName>
            </value>
            <value>
                <fullName>HVAC</fullName>
            </value>
            <value>
                <fullName>Electric</fullName>
            </value>
            <value>
                <fullName>Kitchen</fullName>
            </value>
            <value>
                <fullName>Painting</fullName>
            </value>
            <value>
                <fullName>TV &amp; Internet</fullName>
            </value>
            <value>
                <fullName>Garage Organization</fullName>
            </value>
            <value>
                <fullName>Garage Door</fullName>
            </value>
            <value>
                <fullName>Weed Removal</fullName>
            </value>
            <value>
                <fullName>Maid Service</fullName>
            </value>
            <value>
                <fullName>Plumbing</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>