force-app/main/default/objects/webForm__c/fields/Internet_Cable_Appointment__c.field-meta.xml
<CustomField>
    <fullName>Internet_Cable_Appointment__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Internet Cable Appointment</label>
    <type>Checkbox</type>
</CustomField>