force-app/main/default/objects/webForm__c/fields/Internet_Cable_Data__c.field-meta.xml
<CustomField>
    <fullName>Internet_Cable_Data__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Internet Cable Data</label>
    <type>Checkbox</type>
</CustomField>