force-app/main/default/objects/webForm__c/fields/Internet_Cable_Hot_Lead__c.field-meta.xml
<CustomField>
    <fullName>Internet_Cable_Hot_Lead__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Internet Cable Hot Lead</label>
    <type>Checkbox</type>
</CustomField>