force-app/main/default/objects/webForm__c/fields/Internet_Cable_Note__c.field-meta.xml
<CustomField>
    <fullName>Internet_Cable_Note__c</fullName>
    <label>Internet Cable Note</label>
    <type>TextArea</type>
</CustomField>