force-app/main/default/objects/webForm__c/fields/Internet_Marketing__c.field-meta.xml
<CustomField>
    <fullName>Internet_Marketing__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Internet Marketing</label>
    <type>Checkbox</type>
</CustomField>