force-app/main/default/objects/webForm__c/fields/Kitchen_Bath_Hot_Lead__c.field-meta.xml
<CustomField>
    <fullName>Kitchen_Bath_Hot_Lead__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Kitchen Bath Hot Lead</label>
    <type>Checkbox</type>
</CustomField>