force-app/main/default/objects/webForm__c/fields/Kitchen_Bath_Marketing__c.field-meta.xml
<CustomField>
    <fullName>Kitchen_Bath_Marketing__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Kitchen Bath Marketing</label>
    <type>Checkbox</type>
</CustomField>