force-app/main/default/objects/webForm__c/fields/Kitchen_Bath_Note__c.field-meta.xml
<CustomField>
    <fullName>Kitchen_Bath_Note__c</fullName>
    <label>Kitchen Bath Note</label>
    <type>TextArea</type>
</CustomField>