force-app/main/default/objects/webForm__c/fields/Kitchen_Notes__c.field-meta.xml
<CustomField>
    <fullName>Kitchen_Notes__c</fullName>
    <label>Kitchen Notes</label>
    <type>TextArea</type>
</CustomField>