force-app/main/default/objects/webForm__c/fields/Landscaping__c.field-meta.xml
<CustomField>
    <fullName>Landscaping__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Landscaping</label>
    <type>Checkbox</type>
</CustomField>