force-app/main/default/objects/webForm__c/fields/Landscaping_Notes__c.field-meta.xml
<CustomField>
    <fullName>Landscaping_Notes__c</fullName>
    <label>Landscaping Notes</label>
    <type>TextArea</type>
</CustomField>