force-app/main/default/objects/webForm__c/fields/Lock_Smith_Hot_Lead__c.field-meta.xml
<CustomField>
    <fullName>Lock_Smith_Hot_Lead__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Lock Smith Hot Lead</label>
    <type>Checkbox</type>
</CustomField>