force-app/main/default/objects/webForm__c/fields/Lock_Smith_Marketing__c.field-meta.xml
<CustomField>
    <fullName>Lock_Smith_Marketing__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Lock Smith Marketing</label>
    <type>Checkbox</type>
</CustomField>