force-app/main/default/objects/webForm__c/fields/Lock_Smith_Note__c.field-meta.xml
<CustomField>
    <fullName>Lock_Smith_Note__c</fullName>
    <label>Lock Smith Note</label>
    <type>TextArea</type>
</CustomField>