force-app/main/default/objects/webForm__c/fields/Locksmith__c.field-meta.xml
<CustomField>
    <fullName>Locksmith__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Locksmith</label>
    <type>Checkbox</type>
</CustomField>