force-app/main/default/objects/webForm__c/fields/Locksmith_Notes__c.field-meta.xml
<CustomField>
    <fullName>Locksmith_Notes__c</fullName>
    <label>Locksmith Notes</label>
    <type>TextArea</type>
</CustomField>