force-app/main/default/objects/webForm__c/fields/Maid_Service__c.field-meta.xml
<CustomField>
    <fullName>Maid_Service__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Maid Service</label>
    <type>Checkbox</type>
</CustomField>