force-app/main/default/objects/webForm__c/fields/Maid_Service_Data__c.field-meta.xml
<CustomField>
    <fullName>Maid_Service_Data__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Maid Service Data</label>
    <type>Checkbox</type>
</CustomField>