force-app/main/default/objects/webForm__c/fields/Maid_Service_Hot_Lead__c.field-meta.xml
<CustomField>
    <fullName>Maid_Service_Hot_Lead__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Maid Service Hot Lead</label>
    <type>Checkbox</type>
</CustomField>