force-app/main/default/objects/webForm__c/fields/Maid_Service_Note__c.field-meta.xml
<CustomField>
    <fullName>Maid_Service_Note__c</fullName>
    <label>Maid Service Note</label>
    <type>TextArea</type>
</CustomField>