force-app/main/default/objects/webForm__c/fields/Maid_Service_Notes__c.field-meta.xml
<CustomField>
    <fullName>Maid_Service_Notes__c</fullName>
    <label>Maid Service Notes</label>
    <type>TextArea</type>
</CustomField>