force-app/main/default/objects/webForm__c/fields/of_Entry_Exit_Doors_1__c.field-meta.xml
<CustomField>
    <fullName>of_Entry_Exit_Doors_1__c</fullName>
    <label># of Entry/Exit Doors</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>