force-app/main/default/objects/webForm__c/fields/of_Stories_1__c.field-meta.xml
<CustomField>
    <fullName>of_Stories_1__c</fullName>
    <label># of Stories</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>