force-app/main/default/objects/webForm__c/fields/of_Stories__c.field-meta.xml
<CustomField>
    <fullName>of_Stories__c</fullName>
    <label># of Stories</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>