force-app/main/default/objects/webForm__c/fields/Painting__c.field-meta.xml
<CustomField>
    <fullName>Painting__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Painting</label>
    <type>Checkbox</type>
</CustomField>