force-app/main/default/objects/webForm__c/fields/Painting_Appointment__c.field-meta.xml
<CustomField>
    <fullName>Painting_Appointment__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Painting Appointment</label>
    <type>Checkbox</type>
</CustomField>