force-app/main/default/objects/webForm__c/fields/Painting_Data__c.field-meta.xml
<CustomField>
    <fullName>Painting_Data__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Painting Data</label>
    <type>Checkbox</type>
</CustomField>