force-app/main/default/objects/webForm__c/fields/Painting_Hot_Lead__c.field-meta.xml
<CustomField>
    <fullName>Painting_Hot_Lead__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Painting Hot Lead</label>
    <type>Checkbox</type>
</CustomField>