force-app/main/default/objects/webForm__c/fields/Painting_Marketing__c.field-meta.xml
<CustomField>
    <fullName>Painting_Marketing__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Painting Marketing</label>
    <type>Checkbox</type>
</CustomField>