force-app/main/default/objects/webForm__c/fields/Painting_Note__c.field-meta.xml
<CustomField>
    <fullName>Painting_Note__c</fullName>
    <label>Painting Note</label>
    <type>TextArea</type>
</CustomField>