force-app/main/default/objects/webForm__c/fields/Painting_Notes__c.field-meta.xml
<CustomField>
    <fullName>Painting_Notes__c</fullName>
    <label>Painting Notes</label>
    <type>TextArea</type>
</CustomField>