force-app/main/default/objects/webForm__c/fields/Painting_Status__c.field-meta.xml
<CustomField>
    <fullName>Painting_Status__c</fullName>
    <label>Painting Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Hot_Lead_Statuses</valueSetName>
    </valueSet>
</CustomField>