force-app/main/default/objects/webForm__c/fields/People_in_the_home_water__c.field-meta.xml
<CustomField>
    <fullName>People_in_the_home_water__c</fullName>
    <label># of People in the home</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>