force-app/main/default/objects/webForm__c/fields/Pest_Control_Appointment__c.field-meta.xml
<CustomField>
    <fullName>Pest_Control_Appointment__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Pest Control Appointment</label>
    <type>Checkbox</type>
</CustomField>