force-app/main/default/objects/webForm__c/fields/Pest_Control_Hot_Lead__c.field-meta.xml
<CustomField>
    <fullName>Pest_Control_Hot_Lead__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Pest Control Hot Lead</label>
    <type>Checkbox</type>
</CustomField>