force-app/main/default/objects/webForm__c/fields/Pest_Control_Marketing__c.field-meta.xml
<CustomField>
    <fullName>Pest_Control_Marketing__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Pest Control Marketing</label>
    <type>Checkbox</type>
</CustomField>