force-app/main/default/objects/webForm__c/fields/Pest_Control_Note__c.field-meta.xml
<CustomField>
    <fullName>Pest_Control_Note__c</fullName>
    <label>Pest Control Note</label>
    <type>TextArea</type>
</CustomField>