force-app/main/default/objects/webForm__c/fields/Pest_Control_Notes__c.field-meta.xml
<CustomField>
    <fullName>Pest_Control_Notes__c</fullName>
    <label>Pest Control Notes</label>
    <type>TextArea</type>
</CustomField>