force-app/main/default/objects/webForm__c/fields/Pets__c.field-meta.xml
<CustomField>
    <fullName>Pets__c</fullName>
    <label>Pets</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>