force-app/main/default/objects/webForm__c/fields/Pets_Running_Loose_Backyard__c.field-meta.xml
<CustomField>
    <fullName>Pets_Running_Loose_Backyard__c</fullName>
    <label>Pets Running Loose Backyard</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>NO</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>