force-app/main/default/objects/webForm__c/fields/Plumbing__c.field-meta.xml
<CustomField>
    <fullName>Plumbing__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Plumbing</label>
    <type>Checkbox</type>
</CustomField>