force-app/main/default/objects/webForm__c/fields/Plumbing_Notes__c.field-meta.xml
<CustomField>
    <fullName>Plumbing_Notes__c</fullName>
    <label>Plumbing Notes</label>
    <type>TextArea</type>
</CustomField>