force-app/main/default/objects/webForm__c/fields/Pool_Home_Automation__c.field-meta.xml
<CustomField>
    <fullName>Pool_Home_Automation__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Pool</label>
    <type>Checkbox</type>
</CustomField>