force-app/main/default/objects/webForm__c/fields/Pool_Maintenance_Hot_Lead__c.field-meta.xml
<CustomField>
    <fullName>Pool_Maintenance_Hot_Lead__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Pool Maintenance Hot Lead</label>
    <type>Checkbox</type>
</CustomField>