force-app/main/default/objects/webForm__c/fields/Pool_Maintenance_Marketing__c.field-meta.xml
<CustomField>
    <fullName>Pool_Maintenance_Marketing__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Pool Maintenance Marketing</label>
    <type>Checkbox</type>
</CustomField>