force-app/main/default/objects/webForm__c/fields/Pool_Maintenance_Note__c.field-meta.xml
<CustomField>
    <fullName>Pool_Maintenance_Note__c</fullName>
    <label>Pool Maintenance Note</label>
    <type>TextArea</type>
</CustomField>