force-app/main/default/objects/webForm__c/fields/Pool_Notes__c.field-meta.xml
<CustomField>
    <fullName>Pool_Notes__c</fullName>
    <label>Pool Notes</label>
    <type>TextArea</type>
</CustomField>