force-app/main/default/objects/webForm__c/fields/Pool_Solar__c.field-meta.xml
<CustomField>
    <fullName>Pool_Solar__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Pool</label>
    <type>Checkbox</type>
</CustomField>