force-app/main/default/objects/webForm__c/fields/Pre_Plumb__c.field-meta.xml
<CustomField>
    <fullName>Pre_Plumb__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Pre-Plumb</label>
    <type>Checkbox</type>
</CustomField>