force-app/main/default/objects/webForm__c/fields/RMR_Verified__c.field-meta.xml
<CustomField>
    <fullName>RMR_Verified__c</fullName>
    <defaultValue>false</defaultValue>
    <label>$49.99-$99.99 RMR Verified</label>
    <type>Checkbox</type>
</CustomField>