force-app/main/default/objects/webForm__c/fields/Roofing__c.field-meta.xml
<CustomField>
    <fullName>Roofing__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Roofing</label>
    <type>Checkbox</type>
</CustomField>