force-app/main/default/objects/webForm__c/fields/Roofing_Notes__c.field-meta.xml
<CustomField>
    <fullName>Roofing_Notes__c</fullName>
    <label>Roofing Notes</label>
    <type>TextArea</type>
</CustomField>