force-app/main/default/objects/webForm__c/fields/Services_Pick__c.field-meta.xml
<CustomField>
    <fullName>Services_Pick__c</fullName>
    <label>Services Pick</label>
    <length>700</length>
    <type>LongTextArea</type>
</CustomField>