force-app/main/default/objects/webForm__c/fields/Smart_Home_Automation_Marketing__c.field-meta.xml
<CustomField>
    <fullName>Smart_Home_Automation_Marketing__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Smart Home Automation Marketing</label>
    <type>Checkbox</type>
</CustomField>