force-app/main/default/objects/webForm__c/fields/Smart_Home_Automation_Note__c.field-meta.xml
<CustomField>
    <fullName>Smart_Home_Automation_Note__c</fullName>
    <label>Smart Home Automation Note</label>
    <type>TextArea</type>
</CustomField>