force-app/main/default/objects/webForm__c/fields/Smart_Home_Automation_Notes__c.field-meta.xml
<CustomField>
    <fullName>Smart_Home_Automation_Notes__c</fullName>
    <label>Smart Home Automation Notes</label>
    <type>TextArea</type>
</CustomField>