force-app/main/default/objects/webForm__c/fields/Solar_Appointment__c.field-meta.xml
<CustomField>
    <fullName>Solar_Appointment__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Solar Appointment</label>
    <type>Checkbox</type>
</CustomField>