force-app/main/default/objects/webForm__c/fields/Solar_Data__c.field-meta.xml
<CustomField>
    <fullName>Solar_Data__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Solar Data</label>
    <type>Checkbox</type>
</CustomField>