force-app/main/default/objects/webForm__c/fields/Solar_Hot_Lead__c.field-meta.xml
<CustomField>
    <fullName>Solar_Hot_Lead__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Solar Hot Lead</label>
    <type>Checkbox</type>
</CustomField>