force-app/main/default/objects/webForm__c/fields/Solar_Marketing__c.field-meta.xml
<CustomField>
    <fullName>Solar_Marketing__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Solar Marketing</label>
    <type>Checkbox</type>
</CustomField>