force-app/main/default/objects/webForm__c/fields/Solar_Note__c.field-meta.xml
<CustomField>
    <fullName>Solar_Note__c</fullName>
    <label>Solar Note</label>
    <type>TextArea</type>
</CustomField>