force-app/main/default/objects/webForm__c/fields/Solar_Notes__c.field-meta.xml
<CustomField>
    <fullName>Solar_Notes__c</fullName>
    <label>Solar Notes</label>
    <type>TextArea</type>
</CustomField>