force-app/main/default/objects/webForm__c/fields/Start_DateTime__c.field-meta.xml
<CustomField>
    <fullName>Start_DateTime__c</fullName>
    <formula>DATETIMEVALUE( Date__c + &quot; &quot; +  Start_Time__c + &quot;:00&quot;) + 0.2917</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Start DateTime</label>
    <type>DateTime</type>
</CustomField>