force-app/main/default/objects/webForm__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No Good</fullName>
            </value>
            <value>
                <fullName>Verified Appt Set</fullName>
            </value>
            <value>
                <fullName>Verified</fullName>
            </value>
            <value>
                <fullName>Call Back</fullName>
            </value>
            <value>
                <fullName>In process</fullName>
                <default>true</default>
                <label>In Process</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>