force-app/main/default/objects/webForm__c/fields/Sweepstake_Date__c.field-meta.xml
<CustomField>
    <fullName>Sweepstake_Date__c</fullName>
    <label>Sweepstake Date</label>
    <length>1200</length>
    <type>LongTextArea</type>
</CustomField>