force-app/main/default/objects/webForm__c/fields/Sweepstake_In_Date__c.field-meta.xml
<CustomField>
    <fullName>Sweepstake_In_Date__c</fullName>
    <label>Sweepstake In Date</label>
    <type>Date</type>
</CustomField>