force-app/main/default/objects/webForm__c/fields/TV_Internet__c.field-meta.xml
<CustomField>
    <fullName>TV_Internet__c</fullName>
    <defaultValue>false</defaultValue>
    <label>TV &amp; Internet</label>
    <type>Checkbox</type>
</CustomField>