force-app/main/default/objects/webForm__c/fields/TV_Internet_Notes__c.field-meta.xml
<CustomField>
    <fullName>TV_Internet_Notes__c</fullName>
    <label>TV &amp; Internet Notes</label>
    <type>TextArea</type>
</CustomField>